womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/string_member_access/string_member_access.wdl
version 1.0

workflow string_member_access {
  String s = "hello"

  output {
    Int x = "~{s}".tbi
  }
}
